<resources>
    <string name="app_name">Dabz ©</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign-In</string>
    <string name="register">Register</string>
    <string name="deep_keys_music">Dabz ©</string>
    <string name="don_t_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account"><u>Already have an account?</u></string>
    <string name="add_image">add image</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="caption">Caption</string>
    <string name="messages">Messages</string>
    <string name="add_story">add story</string>
    <string name="no_post_s_nfollow_someone">No Post\'s…\nFollow someone\nor Post something</string>
    <string name="verified">VERIFIED</string>
    <string name="notifications">Notifications</string>
    <string name="stories">Stories</string>
    <string name="comment">Comment...</string>
    <string name="pin_lock_favourites">Pin Lock Favourites</string>
    <string name="info">Info</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="message">Message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="events">Events</string>
    <string name="wallet_balance">Wallet Balance: </string>
    <string name="done">Done</string>
    <string name="brush">brush</string>
    <string name="line">Line</string>
    <string name="oval">Oval</string>
    <string name="rectangle">Rectangle</string>
    <string name="close">Close</string>
    <string name="label_text">Text</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="msg_save_image">Continue Posting Image?</string>
    <string name="label_shape">Shape</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_filter">Filter</string>
    <string name="next">Next</string>
    <string name="event_name">Event Name</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="finish">Finish</string>
    <string name="tickets_amp_pricing"><![CDATA[Tickets & Pricing]]></string>
    <string name="units">Units </string>
    <string name="v_gold">V-Gold:</string>
    <string name="diamond">Diamond</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="price">Price: </string>
    <string name="description">Description</string>
    <string name="units_available">Units Available</string>
    <string name="cancel">Cancel</string>
    <string name="no_comments">No Comments\n____</string>
    <string name="no_messages">No Messages</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt condimentum tristique. Vestibulum ante ante, pretium porttitor iaculis vitae, congue ut sem. Curabitur ac feugiat ligula. Nulla tincidunt est eu sapien iaculis rhoncus. Mauris eu risus sed justo pharetra semper faucibus vel velit.</string>
</resources>