<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/login_constraint"
    android:background="@color/primaryLight"
    tools:context=".ui.auth.LoginAct">
    <ImageView
        android:id="@+id/logo_l_img"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/logo_main"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="TODO" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_l_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/deep_keys_music"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/logo_l_img"
        app:layout_constraintStart_toEndOf="@id/logo_l_img"
        app:layout_constraintBottom_toBottomOf="@id/logo_l_img"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username_l_edt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/hint_clr"
        android:textColor="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:textSize="16sp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_l_img" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_l_edt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/hint_clr"
        android:textColor="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:textSize="16sp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:background="@drawable/edittext_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_l_edt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_l_btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColor="@color/hint_clr"
        android:background="@drawable/button_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_l_edt"
        app:layout_constraintVertical_bias="0.2" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alt_txt"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_l_btn"
        app:layout_constraintStart_toStartOf="@id/login_l_btn"
        app:layout_constraintEnd_toEndOf="@id/login_l_btn"/>

    <ProgressBar
        android:id="@+id/loading_l_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/alt_txt"
        app:layout_constraintBottom_toTopOf="@id/copyright_l_txt"
        app:layout_constraintEnd_toEndOf="@+id/password_l_edt"
        app:layout_constraintStart_toStartOf="@+id/password_l_edt"
        app:layout_constraintVertical_bias="0.3" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/copyright_l_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/copy_clr"
        android:gravity="center"
        android:text="2013 - 2021 Deep Keys Music"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>