<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/primaryLight"
    tools:context=".ui.profile.SetupProfileAct">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/sp_profile_img"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_baseline_image_24"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_image_txt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/add_image"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_profile_img" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username_sp_edt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_main"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:textSize="16sp"
        android:maxLines="1"
        android:maxLength="35"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_clr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_image_txt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_sp_edt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_main"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:textSize="16sp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_clr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_sp_edt" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_sp_edt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_main"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:textSize="16sp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_clr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_sp_edt" />
    <LinearLayout
        android:id="@+id/msisdn_sp_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/email_sp_edt"
        app:layout_constraintStart_toStartOf="parent">
        <com.hbb20.CountryCodePicker
            android:id="@+id/code_picker"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:ccp_textSize="14sp"
            android:layout_weight="40"
            android:paddingTop="6dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_arrowColor="@color/hint_clr"
            app:ccp_contentColor="@color/hint_clr"
            app:ccpDialog_textColor="@color/white"
            app:ccpDialog_backgroundColor="@color/primaryDark"
            android:background="@drawable/edittext_main"
            app:layout_constraintEnd_toStartOf="@id/msisdn_sp_edt"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/msisdn_sp_edt"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/edittext_main"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_weight="60"
            android:layout_marginStart="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="6dp"
            android:paddingTop="6dp"
            android:textSize="16sp"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_clr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/code_picker"
            app:layout_constraintTop_toBottomOf="@id/email_sp_edt" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setup_sp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/save"
        android:textSize="14sp"
        android:textColor="@color/hint_clr"
        android:background="@drawable/button_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msisdn_sp_lay"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading_sp_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/setup_sp_btn"
        app:layout_constraintBottom_toBottomOf="@id/copyright_sp_txt"
        app:layout_constraintEnd_toEndOf="@+id/setup_sp_btn"
        app:layout_constraintStart_toStartOf="@+id/setup_sp_btn"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/copyright_sp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="2013 - 2021 Deep Keys Music"
        android:textColor="@color/copy_clr"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>