<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/primaryLight"
    tools:context=".ui.WelcomeAct">

    <ImageView
        android:id="@+id/logo_w_img"
        android:layout_width="100dp"
        android:minWidth="80dp"
        android:layout_height="100dp"
        android:minHeight="80dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="TODO"
        android:src="@drawable/logo_main"
        app:layout_constraintBottom_toTopOf="@id/title_w_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_w_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deep_keys_music"
        android:textStyle="bold"
        android:textSize="22sp"
        app:autoSizeMinTextSize="18sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/logo_w_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_w_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:text="@string/sign_in"
        android:textColor="@color/hint_clr"
        android:background="@drawable/button_main"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_w_txt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_w_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="16sp"
        android:textColor="@color/hint_clr"
        android:background="@drawable/button_main"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/login_w_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/copyright_w_txt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/copy_clr"
    android:textStyle="normal"
    android:gravity="center"
    android:text="By Softcrypt \n2013 - 2021 Deep Keys Music"
    android:layout_margin="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>