<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="25dp"
    android:background="@color/primaryLight">
    <TextView
        android:id="@+id/dialog_title_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Ticket"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>
    <Spinner
        android:id="@+id/spinner_ticket_type_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/ticket_types"
        android:minHeight="48dp"
        android:padding="4dp"
        android:spinnerMode="dropdown"
        android:theme="@style/Spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_title_ad" />

    <Spinner
        android:id="@+id/spinner_ticket_price_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:entries="@array/ticket_prices"
        android:minHeight="48dp"
        android:padding="4dp"
        android:spinnerMode="dropdown"
        android:theme="@style/Spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_ticket_type_ad" />
<EditText
    android:id="@+id/units_edt_ad"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/units_available"
    android:textColor="@color/white"
    android:textColorHint="@color/hint_clr"
    android:maxLines="1"
    android:minHeight="48dp"
    android:inputType="number"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spinner_ticket_price_ad"
    android:layout_margin="10dp"
    android:padding="8dp"
    android:gravity="center_horizontal"
    android:background="@drawable/edittext_main_no_bg" />
    <EditText
        android:id="@+id/description_edt_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:maxLines="4"
        android:maxLength="320"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_clr"
        android:hint="Ticket Description"
        android:background="@drawable/edittext_main"
        android:layout_margin="10dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/units_edt_ad"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_edt_ad"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="100">
        <Button
            android:id="@+id/cancel_btn_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:background="@drawable/button_main_no_bg"
            android:textColor="@color/hint_clr"
            android:layout_weight="50"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/done_btn_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:background="@drawable/button_main_no_bg"
            android:textColor="@color/hint_clr"
            android:layout_weight="50"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <requestFocus />
</androidx.constraintlayout.widget.ConstraintLayout>